--- a/public/games-external/common/index.htm
+++ b/public/games-external/common/index.htm
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="robots" content="noindex, nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="baidu-site-verification" content="codeva-uSfKoI3pYZ" />
     <title>Full Screen iFrame</title>
     <style>
       html,
